new maps done, about to test on server

--- a/tigamap/templates/tigamap/app_new.html
+++ b/tigamap/templates/tigamap/app_new.html
@@ -114,9 +114,9 @@ function removeMe(){
                         <li><a href={{ hrefs.adults_all }}
                                 >{% trans 'All reports' %}</a></li>
                         <li><a href={{ hrefs.adults_medium }}>
-                            {% trans 'Medium and high probability reports only' %}</a></li>
+                            {% trans 'menu_adults_prob' %}</a></li>
                         <li><a href={{ hrefs.adults_high }}>
-                            {% trans 'High probability reports only' %}</a></li>
+                            {% trans 'menu_adults_definite' %}</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
