--- a/tigamap/templates/tigamap/coverage_map_new.html
+++ b/tigamap/templates/tigamap/coverage_map_new.html
@@ -52,7 +52,7 @@
             border: 1px solid;
             bottom: 80px;
             width: 370px;
-            height: 330px;
+            min-height: 330px;
             overflow: hidden;
             -moz-transition: left 1s ease;
             -webkit-transition: left 1s ease;
