--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -366,7 +366,7 @@
                 function get_data(day, map) {
                     var csrftoken = $.cookie('csrftoken');
                     $.ajax({
-                        url: 'http://localhost:8000/api/{{ endpoint }}/?day=' + day,
+                        url: 'http://{{ domain }}/api/{{ endpoint }}/?day=' + day,
                         contentType: 'application/json',
                         dataType: 'json',
                         headers: {
