added to po files, uploaded to loco, added more, and downloaded new po files (note that mo and po are not now in sync, but this should not matter)

--- a/tigamap/templates/tigamap/site_map.html
+++ b/tigamap/templates/tigamap/site_map.html
@@ -189,10 +189,10 @@
                 function make_popup_text(value) {
                     if (value.site_cat != null) {
                         if(value.site_cat == 0){
-                            return '<p style="text-align:center; font-size: 1.3em;">{% trans 'Embornal' %}</p>';
+                            return '<p style="text-align:center; font-size: 1.3em;">{% trans 'Storm drain' %}</p>';
                         }
                         else if(value.site_cat == 1){
-                           return '<p style="text-align:center; font-size: 1.3em;">{% trans 'Font' %}</p>';
+                           return '<p style="text-align:center; font-size: 1.3em;">{% trans 'Fountain' %}</p>';
                         }
                         else if(value.site_cat == 2){
                             return '<p style="text-align:center; font-size: 1.3em;">{% trans 'Basin' %}</p>';
