improved css media query for legend display in adult report map

--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -122,82 +122,57 @@
             transition: width .6s ease;
         }
 
-        @media (max-width: 669px) and (max-height: 699px) {
+        @media (max-width: 700px), (max-height: 590px) {
             .legend {
                 display: none;
             }
-
             #hand-left {
                 display: none;
             }
-
             #more_info_div {
                 display: none;
-
             }
-
             #more_info_button {
                 display: none;
             }
-
             .legend-main-table {
                 display: none;
             }
-
             .legend-main-table, .legend-main-table tr, .legend-main-table td {
                 display: none;
             }
-
             .legend-popup-area {
                 display: none;
             }
-
             .legend-popup {
                 display: none;
             }
-
             .legend-popup-table {
                 display: none;
             }
-
             .legend-popup-table td {
                 display: none;
             }
-
             .legend-popup-table a {
                 display: none;
             }
-
             .legend-popup-infodiv {
                 display: none;
             }
-
             .info-button-background {
-                background-color: #aaaaaa;
-                border-radius: 50%;
-                height: 30px;
-                width: 30px;
+                display: none;
             }
-
             .info-button-background img {
-                vertical-align: middle;
+                display: none;
             }
-
-            .info-button-background:hover {
-                background-color: white !important;
-            }
-
             .infodiv-table {
                 display: none;
             }
-
             .infodiv-table td {
                 display: none;
             }
-
         }
 
-        @media (min-width: 670px) and (min-height: 700px) {
             .legend {
                 background-color: rgb(200, 200, 200);
                 border-top-right-radius: 15px;
@@ -326,9 +301,6 @@
                 padding-left: 5px !important;
                 border: none !important;
             }
-
-        }
-
 
         </style>
 
