--- a/tigamap/templates/tigamap/coverage_map_new.html
+++ b/tigamap/templates/tigamap/coverage_map_new.html
@@ -43,46 +43,56 @@
             transition: width .6s ease;
         }
 
-        @media (max-width: 669px) and (max-height: 699px) {
+        @media (max-width: 700px), (max-height: 590px) {
             .legend {
-                display: none
+                display: none;
             }
-
+            #hand-left {
+                display: none;
+            }
+            #more_info_div {
+                display: none;
+            }
+            #more_info_button {
+                display: none;
+            }
             .legend-main-table {
-                display: none
+                display: none;
             }
-
             .legend-main-table, .legend-main-table tr, .legend-main-table td {
-                display: none
+                display: none;
             }
-
-            .legend-blurb {
-                display: none
+            .legend-popup-area {
+                display: none;
             }
-
+            .legend-popup {
+                display: none;
+            }
+            .legend-popup-table {
+                display: none;
+            }
+            .legend-popup-table td {
+                display: none;
+            }
+            .legend-popup-table a {
+                display: none;
+            }
+            .legend-popup-infodiv {
+                display: none;
+            }
             .info-button-background {
-                display: none
+                display: none;
             }
-
             .info-button-background img {
-                display: none
+                display: none;
             }
-
-            .info-button-background:hover {
-                display: none
-            }
-
             .infodiv-table {
-                display: none
+                display: none;
             }
-
             .infodiv-table td {
-                display: none
+                display: none;
             }
-
         }
-
-        @media (min-width: 670px) and (min-height: 700px) {
 
             .legend {
                 background-color: rgb(200, 200, 200);
@@ -156,8 +166,6 @@
                 padding-left: 5px !important;
                 border: none !important;
             }
-
-        }
 
     </style>
 
