--- a/tigahelp/templates/tigahelp/policies.html
+++ b/tigahelp/templates/tigahelp/policies.html
@@ -27,12 +27,12 @@
 
         <p>
             <a class="pure-button pure-button-primary" style="min-width:50%;" href={% url 'help.show_terms' %}>
-                {% trans 'User Agreement' %}</a>
+                {% trans 'user-agreement' %}</a>
         </p>
 
         <p>
             <a class="pure-button pure-button-primary" style="min-width:50%;" href={% url 'help.show_privacy' %}>
-                {% trans 'Privacy Policy'  %}</a>
+                {% trans 'privacy-policy'  %}</a>
         </p>
     </div>
 </div>
