--- a/tigahelp/templates/tigahelp/policies_en.html
+++ b/tigahelp/templates/tigahelp/policies_en.html
@@ -26,12 +26,12 @@
 
         <p>
             <a class="pure-button pure-button-primary" style="min-width:50%;" href="/terms/en/">
-                {% trans 'User Agreement' %}</a>
+                {% trans 'user-agreement' %}</a>
         </p>
 
         <p>
             <a class="pure-button pure-button-primary" style="min-width:50%;" href="/privacy/en/">
-                {% trans 'Privacy Policy'  %}</a>
+                {% trans 'privacy-policy'  %}</a>
         </p>
     </div>
 </div>
