--- a/tigamap/templates/tigamap/site_map.html
+++ b/tigamap/templates/tigamap/site_map.html
@@ -189,7 +189,7 @@
                 function make_popup_text(value) {
                     if (value.site_cat != null) {
                         if(value.site_cat == 0){
-                            return '<p style="text-align:center; font-size: 1.3em;">{% trans 'Storm drain' %}</p>';
+                            return '<p style="text-align:center; font-size: 1.3em;">{% trans 'storm-drain' %}</p>';
                         }
                         else if(value.site_cat == 1){
                            return '<p style="text-align:center; font-size: 1.3em;">{% trans 'Fountain' %}</p>';
