--- a/tigamap/templates/tigamap/validated_photo_map.html
+++ b/tigamap/templates/tigamap/validated_photo_map.html
@@ -170,11 +170,11 @@ td {
                                 class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href={{ hrefs.photos_all }}
-                                >{% trans 'All photos' %}</a></li>
+                                >{% trans 'all-photos' %}</a></li>
                         <li><a href={{ hrefs.photos_medium }}>
-                            {% trans 'Medium and high probability photos only' %}</a></li>
+                            {% trans 'medium-and-high-probability-photos-only' %}</a></li>
                         <li><a href={{ hrefs.photos_high }}>
-                            {% trans 'High probability photos only' %}</a></li>
+                            {% trans 'high-probability-photos-only' %}</a></li>
                     </ul>
                 </li>
 
