--- a/stats/templates/stats/report_user_chart.html
+++ b/stats/templates/stats/report_user_chart.html
@@ -75,7 +75,7 @@
             },
             yAxis: {
                 title: {
-                    text: '{% trans 'Cumulative Total' %}'
+                    text: '{% trans 'cumulative-total' %}'
                 },
                 floor: 0,
                 plotLines: [{
